[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/board/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/radial/radial.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/board/coin_view.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/map_editor/tile_view.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/board/summary_view.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/board/end_turn.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/board/start_turn.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/board/story_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/board/cinematic_bars.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/icons/star.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/board/unit_stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/gui/editor/circle.png" type="Texture" id=13]
[ext_resource path="res://assets/fonts/courier_big.tres" type="DynamicFont" id=14]
[ext_resource path="res://scenes/ui/board/objectives.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/ui/board/ap_depleted.tscn" type="PackedScene" id=16]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.529724
margin_right = -0.529785
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="radial" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="radial" parent="radial" instance=ExtResource( 2 )]

[node name="resources" type="MarginContainer" parent="."]
margin_left = 60.0
margin_top = 70.0
margin_right = 60.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_view" parent="resources" instance=ExtResource( 3 )]
zoom_value = 5

[node name="label" type="Label" parent="resources/coin_view"]
margin_left = -30.0
margin_top = -27.0
margin_right = 30.0
margin_bottom = -7.0
text = "0000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile_highlight" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -40.0

[node name="tile_view" parent="tile_highlight" instance=ExtResource( 5 )]
position = Vector2( 60, -20 )

[node name="hp" type="Label" parent="tile_highlight/tile_view"]
margin_left = -50.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 50.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level1" instance=ExtResource( 11 )]
position = Vector2( 60, -70 )

[node name="level2" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level2" instance=ExtResource( 11 )]
position = Vector2( 50, -70 )

[node name="star2" parent="tile_highlight/level2" instance=ExtResource( 11 )]
position = Vector2( 70, -70 )

[node name="level3" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level3" instance=ExtResource( 11 )]
position = Vector2( 50, -65 )

[node name="star2" parent="tile_highlight/level3" instance=ExtResource( 11 )]
position = Vector2( 70, -65 )

[node name="star3" parent="tile_highlight/level3" instance=ExtResource( 11 )]
position = Vector2( 60, -80 )

[node name="abilities" type="Node2D" parent="tile_highlight"]
position = Vector2( 20, -20 )

[node name="ab1" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2( 120, 0 )

[node name="bg" type="Sprite" parent="tile_highlight/abilities/ab1"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab1"]
position = Vector2( 50, 0 )

[node name="disabled" type="Sprite" parent="tile_highlight/abilities/ab1"]
visible = false
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="cd" type="Label" parent="tile_highlight/abilities/ab1/disabled"]
margin_left = -100.0
margin_top = -95.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 14 )
text = "1"
align = 1
valign = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab1"]
margin_left = -50.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 70.0
text = "Heavy Weapon"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ab2" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2( 260, 0 )

[node name="bg" type="Sprite" parent="tile_highlight/abilities/ab2"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab2"]
position = Vector2( 50, 0 )

[node name="disabled" type="Sprite" parent="tile_highlight/abilities/ab2"]
visible = false
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="cd" type="Label" parent="tile_highlight/abilities/ab2/disabled"]
margin_left = -100.0
margin_top = -95.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 14 )
text = "1"
align = 1
valign = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab2"]
margin_left = -50.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 70.0
text = "Heavy Weapon"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ab3" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2( 400, 0 )

[node name="bg" type="Sprite" parent="tile_highlight/abilities/ab3"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab3"]
position = Vector2( 50, 0 )

[node name="disabled" type="Sprite" parent="tile_highlight/abilities/ab3"]
visible = false
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="cd" type="Label" parent="tile_highlight/abilities/ab3/disabled"]
margin_left = -100.0
margin_top = -95.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 14 )
text = "1"
align = 1
valign = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab3"]
margin_left = -50.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 70.0
text = "Heavy Weapon"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="summary" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="summary_view" parent="summary" instance=ExtResource( 6 )]
visible = false

[node name="end_turn" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_turn" parent="end_turn" instance=ExtResource( 7 )]
visible = false

[node name="start_turn" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_turn" parent="start_turn" instance=ExtResource( 8 )]

[node name="cinematic_bars" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cinematic_bars" parent="cinematic_bars" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1279.0
margin_bottom = 800.0
mouse_filter = 2

[node name="story_dialog" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 6.10352e-05
margin_top = -180.0
margin_right = 6.10352e-05
margin_bottom = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story_dialog" parent="story_dialog" instance=ExtResource( 9 )]
visible = false

[node name="unit_stats" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="unit_stats" parent="unit_stats" instance=ExtResource( 12 )]
visible = false

[node name="objectives" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="objectives" parent="objectives" instance=ExtResource( 15 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="ap_depleted" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ap_depleted" parent="ap_depleted" instance=ExtResource( 16 )]
modulate = Color( 1, 1, 1, 1 )
